<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kopia_kotlin"
    tools:context=".LocationActivity">

    <EditText
        android:id="@+id/editTextLoc"
        android:layout_width="233dp"
        android:layout_height="73dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/edit_text_city"
        android:inputType="text"
        android:textColor="#EDC4D9"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonForecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#C35685"
        android:onClick="displayMaps"
        android:text="@string/display_button"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="#C35685"
        android:text="@string/buttonAddons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonForecast"
        android:layout_width="139dp"
        android:layout_height="51dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="38dp"
        android:backgroundTint="#C35685"
        android:text="@string/buttonF"
        app:layout_constraintBottom_toTopOf="@+id/textViewForecast1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoc" />

    <TextView
        android:id="@+id/textViewForecast1"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="5dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewForecast2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForecast" />

    <TextView
        android:id="@+id/textViewForecast2"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="5dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewForecast3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForecast1" />

    <TextView
        android:id="@+id/textViewForecast3"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="5dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewForecast4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForecast2" />

    <TextView
        android:id="@+id/textViewForecast4"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="5dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewForecast5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForecast3" />

    <TextView
        android:id="@+id/textViewForecast5"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="85dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonMaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForecast4" />

    <ImageButton
        android:id="@+id/imageButtonLocationForecast"
        android:layout_width="67dp"
        android:layout_height="52dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="47dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textViewForecast1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonForecast"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoc"
        app:srcCompat="@drawable/loc" />

</androidx.constraintlayout.widget.ConstraintLayout>